FIX(css): Overflow

--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,9 @@ body {
 
 #particles-js {
   z-index: -3;
-  width: 110%;
-  height: 110%;
+
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
